cleaned up some code and fixed storyboards

--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -540,7 +540,7 @@ If you have concerns about the way Peek is handling your Information, please let
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="448" sectionHeaderHeight="18" sectionFooterHeight="18" id="7Qp-lS-cam">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.87747237589436011" green="0.89875475888324874" blue="0.88719668599148982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="separatorColor" red="0.79215686269999996" green="0.79971140620000003" blue="0.82039231059999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                         <prototypes>
