--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -554,8 +554,8 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMx-bS-Jbf">
                                             <rect key="frame" x="33" y="67" width="205" height="16"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="16" id="Et4-gK-Blv"/>
-                                                <constraint firstAttribute="width" constant="205" id="eG7-sr-7DJ"/>
+                                                <constraint firstAttribute="height" constant="16" id="7rb-9A-oQX"/>
+                                                <constraint firstAttribute="width" constant="205" id="J9L-iN-L3h"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.57647058823529407" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -564,14 +564,11 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location icon" translatesAutoresizingMaskIntoConstraints="NO" id="j1Q-pJ-r9G">
                                             <rect key="frame" x="18" y="66" width="11" height="19"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="11" id="G0B-Sv-l7m"/>
+                                                <constraint firstAttribute="width" constant="11" id="WDS-bq-MzB"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fuz-8D-oCA">
-                                            <rect key="frame" x="18" y="8" width="339" height="44"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="44" id="bSy-mC-r2A"/>
-                                            </constraints>
+                                            <rect key="frame" x="18" y="8" width="302" height="44"/>
                                             <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="13"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -579,8 +576,8 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GP0-B9-VkC">
                                             <rect key="frame" x="337" y="420" width="20" height="17"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="20" id="EC6-a8-9LE"/>
-                                                <constraint firstAttribute="height" constant="17" id="K9q-aG-E5e"/>
+                                                <constraint firstAttribute="height" constant="17" id="Wxu-dU-asK"/>
+                                                <constraint firstAttribute="width" constant="20" id="i3o-Tj-yJ9"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                             <nil key="textColor"/>
@@ -593,46 +590,61 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Comment Icon" translatesAutoresizingMaskIntoConstraints="NO" id="I7x-JI-u78">
                                             <rect key="frame" x="317" y="420" width="18" height="18"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="18" id="3wE-xl-jGS"/>
+                                                <constraint firstAttribute="width" constant="18" id="jac-Bm-9Nz"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZM-wX-QdW">
                                             <rect key="frame" x="18" y="414" width="127" height="26"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="127" id="H4n-qb-Wge"/>
+                                                <constraint firstAttribute="width" constant="127" id="oQv-4m-BN9"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="10"/>
                                             <color key="textColor" red="0.57647058823529407" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NSFW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Bq-VU-GZS">
+                                            <rect key="frame" x="321" y="16" width="36" height="18"/>
+                                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.803992523006135" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="36" id="fbz-he-8nK"/>
+                                                <constraint firstAttribute="height" constant="18" id="uQa-7p-h3c"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="leading" secondItem="7gS-XZ-k3n" secondAttribute="leading" id="4yI-ml-JJe"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="leading" secondItem="fqG-iv-Uxx" secondAttribute="leadingMargin" constant="10" id="4yQ-MZ-RDR"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="7gS-XZ-k3n" secondAttribute="trailing" constant="10" id="73g-cX-RVV"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="trailing" secondItem="GP0-B9-VkC" secondAttribute="trailing" id="8cP-ZK-oFp"/>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="top" secondItem="fuz-8D-oCA" secondAttribute="bottom" constant="14" id="AGd-Zb-ssx"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" id="Emo-Fy-GPb"/>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="centerY" secondItem="gMx-bS-Jbf" secondAttribute="centerY" id="QNE-iK-lc0"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="trailing" secondItem="7gS-XZ-k3n" secondAttribute="trailing" id="QUe-92-6x8"/>
-                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="2" id="QxZ-sO-Q3A"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="GP0-B9-VkC" secondAttribute="top" id="RPn-r9-Qog"/>
-                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="bottom" secondItem="fqG-iv-Uxx" secondAttribute="bottomMargin" id="WIN-LR-3uF"/>
-                                        <constraint firstItem="gMx-bS-Jbf" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="trailing" constant="4" id="Zb5-nN-H4h"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="centerY" secondItem="GP0-B9-VkC" secondAttribute="centerY" id="d8W-vO-eRP"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="gMx-bS-Jbf" secondAttribute="bottom" constant="6" id="l96-nH-kl7"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="I7x-JI-u78" secondAttribute="bottom" constant="2" id="mYr-EU-yRE"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="8" symbolic="YES" id="pIk-pe-NgS"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="leading" id="tzS-2H-2ld"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="leading" secondItem="DZM-wX-QdW" secondAttribute="leading" id="uF2-eO-FSZ"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="j1Q-pJ-r9G" secondAttribute="bottom" constant="4" id="zCS-Sc-usc"/>
-                                        <constraint firstItem="GP0-B9-VkC" firstAttribute="leading" secondItem="I7x-JI-u78" secondAttribute="trailing" constant="2" id="zJD-81-bdx"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="top" secondItem="fuz-8D-oCA" secondAttribute="bottom" constant="14" id="0bv-Ef-Aq2"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="fqG-iv-Uxx" secondAttribute="leadingMargin" constant="10" id="0uH-Q3-0Bn"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="8" symbolic="YES" id="45d-ge-0bR"/>
+                                        <constraint firstItem="gMx-bS-Jbf" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="trailing" constant="4" id="7Q4-BV-bxf"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="gMx-bS-Jbf" secondAttribute="bottom" constant="6" id="7j0-Q2-HJv"/>
+                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="2" id="AUt-0r-lmC"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="leading" secondItem="7gS-XZ-k3n" secondAttribute="leading" id="CzJ-8H-g49"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="j1Q-pJ-r9G" secondAttribute="bottom" constant="4" id="DtC-Gm-RRe"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="leading" id="FPO-nm-ZqU"/>
+                                        <constraint firstItem="GP0-B9-VkC" firstAttribute="leading" secondItem="I7x-JI-u78" secondAttribute="trailing" constant="2" id="ION-pw-II3"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="4Bq-VU-GZS" secondAttribute="bottom" constant="55" id="Ld6-fE-KrD"/>
+                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="bottom" secondItem="fqG-iv-Uxx" secondAttribute="bottomMargin" id="QbD-QE-DnM"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="centerY" secondItem="gMx-bS-Jbf" secondAttribute="centerY" id="TgX-hm-CMV"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" constant="8" id="VF0-XD-h8q"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="GP0-B9-VkC" secondAttribute="top" id="YlZ-Eu-5dy"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="leading" secondItem="fuz-8D-oCA" secondAttribute="trailing" constant="1" id="dKF-1c-Qva"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="trailing" secondItem="GP0-B9-VkC" secondAttribute="trailing" id="dr0-pv-0EA"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" id="ieh-1t-4pk"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="centerX" secondItem="fqG-iv-Uxx" secondAttribute="centerX" id="ktJ-V4-H8j"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="centerY" secondItem="GP0-B9-VkC" secondAttribute="centerY" id="of2-1W-aH6"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="leading" secondItem="DZM-wX-QdW" secondAttribute="leading" id="tjJ-sl-1ac"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="trailing" secondItem="7gS-XZ-k3n" secondAttribute="trailing" id="wcu-qa-qQv"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="I7x-JI-u78" secondAttribute="bottom" constant="2" id="yko-zu-1eW"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="commentsLabel" destination="GP0-B9-VkC" id="5Qr-7H-nhf"/>
                                     <outlet property="locationLabel" destination="gMx-bS-Jbf" id="QpK-wd-bQQ"/>
+                                    <outlet property="nsfwLabel" destination="4Bq-VU-GZS" id="7Le-kp-gtb"/>
                                     <outlet property="peekImageView" destination="7gS-XZ-k3n" id="Pdj-oM-G1a"/>
                                     <outlet property="peekTimeLabel" destination="DZM-wX-QdW" id="mE7-ob-Dhz"/>
                                     <outlet property="peekTitleLabel" destination="fuz-8D-oCA" id="nF1-L3-de5"/>
