--- a/Peek/Onboarding.storyboard
+++ b/Peek/Onboarding.storyboard
@@ -68,29 +68,35 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYN-uE-9bO">
                                         <rect key="frame" x="8" y="8" width="224" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="0k6-bm-Z3Q"/>
+                                            <constraint firstAttribute="height" constant="24" id="cKz-MV-bdH"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share your photos anonymously with the world." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-Am-VCG">
-                                        <rect key="frame" x="20" y="130" width="201" height="84"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="84" id="Uc1-FG-ZsY"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="peek icon with text" translatesAutoresizingMaskIntoConstraints="NO" id="Fb5-mt-Rf0">
                                         <rect key="frame" x="37" y="40" width="167" height="82"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="82" id="dHf-fi-2rV"/>
+                                            <constraint firstAttribute="height" constant="82" id="mlc-pU-ql7"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-Am-VCG">
+                                        <rect key="frame" x="20" y="113" width="201" height="136"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Share your photos anonymously with the world.">
+                                                <attributes>
+                                                    <font key="NSFont" size="12" name="AvenirNext-Regular"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👉" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIo-jO-2w5">
-                                        <rect key="frame" x="95" y="235" width="51" height="38"/>
+                                        <rect key="frame" x="95" y="244" width="51" height="38"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="38" id="qLN-Rd-gfD"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -98,20 +104,19 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="95" id="2rZ-Ge-GDV"/>
-                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="centerX" secondItem="Fb5-mt-Rf0" secondAttribute="centerX" id="9La-2k-wwh"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="8" id="Chf-cH-Bpo"/>
-                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="37" id="JdI-BC-Uro"/>
-                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="top" secondItem="n9h-Am-VCG" secondAttribute="bottom" constant="21" id="Q4i-OC-Wu6"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="centerX" secondItem="Fb5-mt-Rf0" secondAttribute="centerX" id="UGN-bM-ghr"/>
-                                    <constraint firstAttribute="bottom" secondItem="eIo-jO-2w5" secondAttribute="bottom" constant="40" id="VbL-e4-KY7"/>
-                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="top" secondItem="mYN-uE-9bO" secondAttribute="bottom" constant="8" id="XNu-9N-bfv"/>
-                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="centerX" secondItem="n9h-Am-VCG" secondAttribute="centerX" id="ac3-e6-kst"/>
-                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="20" id="fUt-hx-oAE"/>
-                                    <constraint firstAttribute="width" constant="241" id="jom-Nt-vo9"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="top" secondItem="vGI-ic-c6m" secondAttribute="top" constant="8" id="p9X-VO-BJ7"/>
-                                    <constraint firstAttribute="trailing" secondItem="mYN-uE-9bO" secondAttribute="trailing" constant="9" id="qq0-xQ-xpZ"/>
-                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="top" secondItem="Fb5-mt-Rf0" secondAttribute="bottom" constant="8" symbolic="YES" id="wTh-EE-slz"/>
+                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="top" secondItem="vGI-ic-c6m" secondAttribute="topMargin" id="4sE-jA-u3u"/>
+                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leadingMargin" id="8Jp-nU-hII"/>
+                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="centerX" secondItem="Fb5-mt-Rf0" secondAttribute="centerX" id="DXm-hJ-fMt"/>
+                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="95" id="KiD-s4-K6Q"/>
+                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="centerX" secondItem="eIo-jO-2w5" secondAttribute="centerX" id="Kpf-DF-jhy"/>
+                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="top" secondItem="mYN-uE-9bO" secondAttribute="bottom" constant="8" symbolic="YES" id="Tss-xL-Vol"/>
+                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="37" id="XYl-Ls-MUz"/>
+                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="20" id="ZXl-qh-DB5"/>
+                                    <constraint firstAttribute="bottom" secondItem="eIo-jO-2w5" secondAttribute="bottom" constant="31" id="aWf-2R-sdw"/>
+                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="centerX" secondItem="vGI-ic-c6m" secondAttribute="centerX" id="b6B-OM-7qv"/>
+                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="centerX" secondItem="n9h-Am-VCG" secondAttribute="centerX" id="gyQ-EV-Rnb"/>
+                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="top" secondItem="mYN-uE-9bO" secondAttribute="bottom" constant="81" id="riV-jn-K2h"/>
+                                    <constraint firstAttribute="bottom" secondItem="n9h-Am-VCG" secondAttribute="bottom" constant="64" id="ve1-QJ-Ka0"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -122,10 +127,10 @@
                         </subviews>
                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="top" secondItem="9Sq-HP-uQt" secondAttribute="bottom" constant="157" id="8vC-VC-R9M"/>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="leading" secondItem="MzU-KS-mLu" secondAttribute="leadingMargin" constant="46" id="AoD-Vm-mOs"/>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="centerY" secondItem="MzU-KS-mLu" secondAttribute="centerY" id="Tc5-Vp-gTG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="vGI-ic-c6m" secondAttribute="trailing" constant="56" id="Y1F-AN-Hd2"/>
+                            <constraint firstItem="vGI-ic-c6m" firstAttribute="leading" secondItem="MzU-KS-mLu" secondAttribute="leadingMargin" constant="46" id="HTh-oa-IxQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vGI-ic-c6m" secondAttribute="trailing" constant="56" id="JjZ-U7-Edl"/>
+                            <constraint firstItem="vGI-ic-c6m" firstAttribute="centerY" secondItem="MzU-KS-mLu" secondAttribute="centerY" id="xOr-Tw-itM"/>
+                            <constraint firstItem="vGI-ic-c6m" firstAttribute="top" secondItem="9Sq-HP-uQt" secondAttribute="bottom" constant="157" id="z99-tG-oHK"/>
                         </constraints>
                     </view>
                     <connections>
